--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "babel-preset-react-native-stage-0": "^1.0.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
+    "react-native-message-bar": "^1.6.0",
+    "react-native-vector-icons": "^4.1.1",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
